[project]
name = "turbobt"
description = "A next generation Bittensor SDK, for Python 3."
readme = "README.md"
authors = [
    { name = "Reef Technologies", email = "opensource@reef.pl" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = "==3.11.*"
dependencies = [
    "bittensor-drand~=1.0.0",
    "bittensor-wallet~=4.0.0",
    "eciespy~=0.4.6",
    "httpx~=0.26.0",
    "scalecodec~=1.2.11",
    "websockets~=14.1",
    "xxhash~=3.5.0",
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/bactensor/turbobt"
Issues = "https://github.com/bactensor/turbobt/issues"

[dependency-groups]
dev = [
    "docker",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-xdist",
    "pytest",
    "ruff",
]

[build-system]
requires = [
    "pdm-backend~=2.4",
    "setuptools-scm~=9.0",
]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["turbobt"]


[tool.pdm.version]
# Use Git tags to determine the version
source = "scm"



[tool.ruff.lint]
# TODO add D
select = [
    "E", "F", "I", "UP", "S",
    "TC005",
]
ignore = [
    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
    "D101", "D102","D103", "D104", # TODO remove once we have docstring for all public methods
    "E501", # TODO: remove E501 once docstrings are formatted
    "S101", "S108", "S603", "S607",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/test*/**.py" = ["D", "F403", "F405", "S106", "S311"]
